# pv-business-plan

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 00-template.ipynb
sql/: schema.sql
sql/migrations/: env.py
sql/migrations/versions/: 19c86595ab91_create_initial_pv_business_plan_schema.py
src/: db.py  financial_models.py  report_generation.py  solar_calculations.py
tests/: test_financial_models.py  test_solar_calculations.py
